@@ -3,7 +3,12 @@ package datadog.crashtracking;
 import static datadog.crashtracking.CrashUploader.HEADER_DD_EVP_SUBDOMAIN;
 import static datadog.crashtracking.CrashUploader.HEADER_DD_TELEMETRY_API_VERSION;
 import static datadog.crashtracking.CrashUploader.TELEMETRY_API_VERSION;
-import static org.junit.jupiter.api.Assertions.*;
+import static net.javacrumbs.jsonunit.assertj.JsonAssertions.assertThatJson;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.when;
 
@@ -25,7 +30,8 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.Duration;
-import java.util.*;
+import java.util.Map;
+import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -135,7 +141,7 @@ public class CrashUploaderTest {
   @Test
   public void testTelemetryCrashPing() throws Exception {
     // Given
-    final String expected = readFileAsString("golden/telemetry/sample-ping-for-telemetry.txt");
+    final String expected = readFileAsString("golden/telemetry/sample-ping-for-telemetry.json");
     ConfigManager.StoredConfig crashConfig =
         new ConfigManager.StoredConfig.Builder(config)
             .reportUUID(SAMPLE_UUID)
@@ -168,7 +174,12 @@ public class CrashUploaderTest {
     assertTrue(tags.contains("uuid:" + crashConfig.reportUUID));
     assertTrue(tags.contains(TraceUtils.normalizeTag("tracer_version:" + VersionInfo.VERSION)));
     assertTrue(tags.contains("language_name:jvm"));
-    assertEquals(expected, event.get("payload").get(0).get("message").asText());
+    assertTrue(tags.contains("runtime_version:"));
+    assertTrue(tags.contains("runtime_vendor:"));
+    assertTrue(tags.contains("runtime_name:"));
+    assertEquals(
+        mapper.readTree(expected),
+        mapper.readTree(event.get("payload").get(0).get("message").asText()));
     assertCommonPayload(event);
   }
 
@@ -177,7 +188,7 @@ public class CrashUploaderTest {
     // Given
     final ObjectMapper mapper = new ObjectMapper();
     final Map<String, ?> expected =
-        mapper.readValue(readFileAsString("golden/errortracking/sample-ping.txt"), Map.class);
+        mapper.readValue(readFileAsString("golden/errortracking/sample-ping.json"), Map.class);
     // remove ddtags and osinfo if present from the expected (they will be checked apart)
     expected.remove("ddtags");
     expected.remove("os_info");
@@ -211,7 +222,7 @@ public class CrashUploaderTest {
     assertNotNull(osInfo.get("architecture"));
     assertNotNull(osInfo.get("version"));
     assertNotNull(osInfo.get("os_type"));
-    assertDoesNotThrow(() -> Long.parseLong((String) osInfo.get("bitness"))); // 32 or 64 typically
+    assertTrue(((String) osInfo.get("bitness")).matches("\\d+-bit")); // e.g. "64-bit"
 
     // assert ddtags
     String ddtags = (String) extracted.remove("ddtags");
@@ -220,6 +231,9 @@ public class CrashUploaderTest {
     assertTrue(ddtags.contains("service:")); // has the service
     assertTrue(ddtags.contains("uuid:" + crashConfig.reportUUID));
     assertTrue(ddtags.contains("is_crash_ping:true"));
+    assertTrue(ddtags.contains("runtime_version:"));
+    assertTrue(ddtags.contains("runtime_vendor:"));
+    assertTrue(ddtags.contains("runtime_name:"));
 
     // assert platform independent equality
     assertEquals(
@@ -240,14 +254,15 @@ public class CrashUploaderTest {
   @ParameterizedTest
   @ValueSource(
       strings = {
-        "sample-crash-for-telemetry.txt",
-        "sample-crash-for-telemetry-2.txt",
-        "sample-crash-for-telemetry-3.txt",
-        "sample_oom.txt"
+        "sample-crash-for-telemetry.json",
+        "sample-crash-for-telemetry-2.json",
+        "sample-crash-for-telemetry-3.json",
+        "sample_oom.json"
       })
   public void testTelemetryHappyPath(String log) throws Exception {
     // Given
     CrashLog expected = CrashLog.fromJson(readFileAsString("golden/telemetry/" + log));
+    final String inputLog = log.replace(".json", ".txt");
     ConfigManager.StoredConfig crashConfig =
         new ConfigManager.StoredConfig.Builder(config)
             .reportUUID(SAMPLE_UUID)
@@ -257,7 +272,7 @@ public class CrashUploaderTest {
     // When
     uploader = new CrashUploader(config, crashConfig);
     server.enqueue(new MockResponse().setResponseCode(200));
-    uploader.upload(getResourcePath(log));
+    uploader.upload(getResourcePath(inputLog));
 
     final RecordedRequest recordedRequest = server.takeRequest(5, TimeUnit.SECONDS);
 
@@ -278,9 +293,9 @@ public class CrashUploaderTest {
     String message = event.get("payload").get(0).get("message").asText();
     CrashLog extracted = CrashLog.fromJson(message);
 
-    assertTrue(
-        expected.equalsForTest(extracted),
-        () -> "Expected: " + expected.toJson() + "\nbut got: " + extracted.toJson());
+    assertThatJson(extracted.toJson())
+        .whenIgnoringPaths("os_info", "metadata", "experimental")
+        .isEqualTo(expected.toJson());
     assertEquals("severity:crash", event.get("payload").get(0).get("tags").asText());
     assertCommonPayload(event);
   }
@@ -288,10 +303,10 @@ public class CrashUploaderTest {
   @ParameterizedTest
   @ValueSource(
       strings = {
-        "sample-crash-for-telemetry.txt",
-        "sample-crash-for-telemetry-2.txt",
-        "sample-crash-for-telemetry-3.txt",
-        "sample_oom.txt"
+        "sample-crash-for-telemetry.json",
+        "sample-crash-for-telemetry-2.json",
+        "sample-crash-for-telemetry-3.json",
+        "sample_oom.json"
       })
   public void testErrorTrackingHappyPath(String log) throws Exception {
     // Given
@@ -301,17 +316,19 @@ public class CrashUploaderTest {
     // remove ddtags and osinfo if present from the expected (they will be checked apart)
     expected.remove("ddtags");
     expected.remove("os_info");
+    final String inputLog = log.replace(".json", ".txt");
     ConfigManager.StoredConfig crashConfig =
         new ConfigManager.StoredConfig.Builder(config)
             .reportUUID(SAMPLE_UUID)
             .processTags("a:b")
             .runtimeId("1234")
             .tags(ConfigManager.getMergedTagsForSerialization(Config.get())) // take the real ones
+            .extendedInfoEnabled(true)
             .build();
     // When
     uploader = new CrashUploader(config, crashConfig);
     server.enqueue(new MockResponse().setResponseCode(200));
-    uploader.remoteUpload(readFileAsString(log), false, true);
+    uploader.remoteUpload(readFileAsString(inputLog), false, true);
 
     final RecordedRequest recordedRequest = server.takeRequest(5, TimeUnit.SECONDS);
 
@@ -327,7 +344,7 @@ public class CrashUploaderTest {
     assertNotNull(osInfo.get("architecture"));
     assertNotNull(osInfo.get("version"));
     assertNotNull(osInfo.get("os_type"));
-    assertDoesNotThrow(() -> Long.parseLong((String) osInfo.get("bitness"))); // 32 or 64 typically
+    assertTrue(((String) osInfo.get("bitness")).matches("\\d+-bit")); // e.g. "64-bit"
 
     // assert ddtags
     String ddtags = (String) extracted.remove("ddtags");
@@ -336,21 +353,67 @@ public class CrashUploaderTest {
     assertTrue(ddtags.contains("service:")); // has the service
     assertTrue(ddtags.contains("uuid:" + crashConfig.reportUUID));
     assertTrue(ddtags.contains("is_crash:true"));
+    assertTrue(ddtags.contains("runtime_version:"));
+    assertTrue(ddtags.contains("runtime_vendor:"));
+    assertTrue(ddtags.contains("runtime_name:"));
 
     // assert platform independent equality
-    assertEquals(
-        expected,
-        extracted,
-        () -> {
-          try {
-            return "Expected: "
-                + mapper.writeValueAsString(expected)
-                + "\nbut got: "
-                + mapper.writeValueAsString(extracted);
-          } catch (JsonProcessingException e) {
-            throw new RuntimeException(e);
-          }
-        });
+    assertThatJson(mapper.writeValueAsString(extracted))
+        .whenIgnoringPaths("experimental")
+        .isEqualTo(mapper.writeValueAsString(expected));
+  }
+
+  @Test
+  public void testErrorTrackingExcludesExtendedInfoByDefault() throws Exception {
+    // extendedInfoEnabled defaults to false — files, thread_name and runtime_args must not appear
+    ConfigManager.StoredConfig crashConfig =
+        new ConfigManager.StoredConfig.Builder(config)
+            .reportUUID(SAMPLE_UUID)
+            .tags(ConfigManager.getMergedTagsForSerialization(Config.get()))
+            .build();
+
+    uploader = new CrashUploader(config, crashConfig);
+    server.enqueue(new MockResponse().setResponseCode(200));
+    uploader.remoteUpload(readFileAsString("sample-crash-for-telemetry.txt"), false, true);
+
+    final RecordedRequest recordedRequest = server.takeRequest(5, TimeUnit.SECONDS);
+    final ObjectMapper mapper = new ObjectMapper();
+    final JsonNode event = mapper.readTree(recordedRequest.getBody().readUtf8());
+
+    assertNull(event.get("files"));
+    assertNull(event.at("/error/thread_name").textValue());
+    assertTrue(event.at("/experimental/runtime_args").isMissingNode());
+  }
+
+  @Test
+  public void testErrorTrackingSerializesRuntimeArgs() throws Exception {
+    ConfigManager.StoredConfig crashConfig =
+        new ConfigManager.StoredConfig.Builder(config)
+            .reportUUID(SAMPLE_UUID)
+            .processTags("a:b")
+            .runtimeId("1234")
+            .tags(ConfigManager.getMergedTagsForSerialization(Config.get()))
+            .extendedInfoEnabled(true)
+            .build();
+
+    uploader = new CrashUploader(config, crashConfig);
+    server.enqueue(new MockResponse().setResponseCode(200));
+    uploader.remoteUpload(readFileAsString("sample-crash-macos-aarch64.txt"), false, true);
+
+    final RecordedRequest recordedRequest = server.takeRequest(5, TimeUnit.SECONDS);
+    final ObjectMapper mapper = new ObjectMapper();
+    final JsonNode event = mapper.readTree(recordedRequest.getBody().readUtf8());
+
+    final JsonNode runtimeArgs = event.at("/experimental/runtime_args");
+    assertTrue(runtimeArgs.isArray());
+    boolean found = false;
+    for (JsonNode runtimeArg : runtimeArgs) {
+      if ("--enable-native-access=ALL-UNNAMED".equals(runtimeArg.asText())) {
+        found = true;
+        break;
+      }
+    }
+    assertTrue(found);
   }
 
   private void assertCommonHeader(JsonNode event) {
